[gd_scene load_steps=10 format=2]

[ext_resource path="res://shopmenu.gd" type="Script" id=1]
[ext_resource path="res://farmingTilesheetComplete.png" type="Texture2D" id=2]

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 176, 80, 16, 16 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 12 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 2 )
region = Rect2( 16, 64, 16, 16 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 384, 128, 32, 32 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 13 ) ],
"loop": true,
"name": "berryseed",
"speed": 5.0
}, {
"frames": [ SubResource( 10 ) ],
"loop": true,
"name": "randomseed",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 2 )
region = Rect2( 64, 80, 16, 16 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 14 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="shopmenu" type="StaticBody2D"]
visible = false
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 105.0
offset_bottom = 56.0
color = Color( 0.333333, 0.219608, 0.219608, 0.247059 )

[node name="buttonright" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
offset_left = 24.0
offset_top = 29.0
offset_right = 43.0
offset_bottom = 54.0
pivot_offset = Vector2( 13, 13 )

[node name="buttonleft" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
offset_left = 2.0
offset_top = 29.0
offset_right = 21.0
offset_bottom = 54.0
pivot_offset = Vector2( 13, 13 )

[node name="rightbuttonicon" type="AnimatedSprite2D" parent="."]
position = Vector2( 30, 40 )
rotation = -1.5708
scale = Vector2( 2, 2 )
frames = SubResource( 2 )

[node name="leftbuttonicon" type="AnimatedSprite2D" parent="."]
position = Vector2( 15, 42 )
rotation = 1.5708
scale = Vector2( 2, 2 )
frames = SubResource( 2 )

[node name="icon" type="AnimatedSprite2D" parent="."]
position = Vector2( 24, 17 )
scale = Vector2( 2, 2 )
frames = SubResource( 5 )
animation = "berryseed"

[node name="coinicon" type="AnimatedSprite2D" parent="."]
position = Vector2( 84, 17 )
frames = SubResource( 7 )

[node name="pricelabel" type="RichTextLabel" parent="."]
offset_left = 44.0
offset_top = 11.0
offset_right = 84.0
offset_bottom = 51.0
text = "100"

[node name="buttonbuycolor" type="ColorRect" parent="."]
offset_left = 54.0
offset_top = 30.0
offset_right = 99.0
offset_bottom = 49.0
color = Color( 0.501961, 0.235294, 0.235294, 0.384314 )

[node name="buttonbuy" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
offset_left = 53.0
offset_top = 29.0
offset_right = 99.0
offset_bottom = 49.0

[connection signal="pressed" from="buttonright" to="." method="_on_buttonright_pressed"]
[connection signal="pressed" from="buttonleft" to="." method="_on_buttonleft_pressed"]
[connection signal="pressed" from="buttonbuy" to="." method="_on_buttonbuy_pressed"]
